--- a/flexbox.html
+++ b/flexbox.html
@@ -3,21 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Flexbox</title>
-    <link rel="stylesheet" href="flexbox.css">
-    <link rel="stylesheet" href="styles.css">
+    <title>#12 Flexbox - CodingTube</title>
+    <link rel="stylesheet" href="flexbox_styles.css">
+    <link rel="stylesheet" href="initial_styles.css">
 </head>
 <body>
     <div class="padre">
-        <div class="hijos hijo1">Lunes</div>
-        <div class="hijos hijo2">Martes</div>
-        <div class="hijos hijo3">Miercoles</div>
-        <!-- <div class="hijos hijo4">Jueves</div>
+        <div class="hijos lunes">Lunes</div>
+        <div class="hijos martes">Martes</div>
+        <div class="hijos miercoles">Miércoles</div>
+        <div class="hijos hijo4">Jueves</div>
         <div class="hijos hijo5">Viernes</div>
         <div class="hijos hijo6">Sábado</div>
-        <div class="hijos hijo7">Domingo</div> -->
+        <div class="hijos hijo7">Domingo</div>
     </div>
-    <!-- <div class="x"></div> -->
-    <!-- <div class="y"></div> -->
+    <div class="x"></div>
 </body>
 </html>
